liudf 20151119	Add d3pie widget in ui.js

--- a/luci2/htdocs/luci2/template/network.apfreeqos.htm
+++ b/luci2/htdocs/luci2/template/network.apfreeqos.htm
@@ -7,6 +7,10 @@
 
 <div class="tab-content">
 	<div class="tab-pane active" id="stats">
+		<div id="ip_total_rate_pie"/>
+		<div id="ip_down_rate_pie"/>
+		<div id="ip_up_rate_pie"/>
+
 		<div class="panel panel-default">
 			<div class="panel-heading">
 				<h3 class="panel-title"><%:Online devices table statistics%></h3>
@@ -14,31 +18,7 @@
 			<div class="panel-body" id="ip_stat_table">
 			</div>
 		</div>
-		
-		<div class="panel panel-default">
-			<div class="panel-heading">
-				<h3 class="panel-title"><%:Online devices total rate pie statistics%></h3>
-			</div>
-			<div class="panel-body" id="ip_total_rate_pie">
-			</div>
-		</div>
-		
-		<div class="panel panel-default">
-			<div class="panel-heading">
-				<h3 class="panel-title"><%:Online devices down rate pie statistics%></h3>
-			</div>
-			<div class="panel-body" id="ip_down_rate_pie">
-			</div>
-		</div>
-		
-		<div class="panel panel-default">
-			<div class="panel-heading">
-				<h3 class="panel-title"><%:Online devices up rate pie statistics%></h3>
-			</div>
-			<div class="panel-body" id="ip_up_rate_pie">
-			</div>
-		</div>
-
+	
 	</div>
 
 	<div class="tab-pane" id="rule1">
